option('gettext', type: 'combo', choices : ['auto', 'yes', 'no'], value: 'auto')
option('doxygen', type: 'combo', choices : ['auto', 'yes', 'no'], value: 'auto')
option('included-pcre2', type: 'combo', choices : ['yes', 'no'], value: 'yes')
option('docdir', type: 'string', value: '/doc/fish')
# TODO: Moar options
